--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,8 +61,8 @@
 .form-container .form-horizontal .signin{
     color: #fff;
     background: linear-gradient(to right, #FF638E, #1093ea);
-    font-size: 15px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 700;
     letter-spacing: 0.5px;
     text-transform: capitalize;
     width: 100%;
@@ -181,6 +181,9 @@
     }
     .form-container .left-content .title{ margin: 0 0 20px; }
     .form-container .left-content .sub-title{ font-size: 40px; }
+    .top-head{
+        display: none;
+    }
 }
 .login-title{
     margin-top: 20%;
@@ -197,3 +200,261 @@
    
 }
 
+.head-title {
+    background: #337ab7;
+  }
+  
+  .head-title h2 {
+    color: #fff;
+    font-size: 25px;
+    padding: 1% 5%;
+    margin-left: 50px;
+  }
+  
+  .main-content {
+    padding: 5%;
+  }
+  
+  .app {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .app-icon {
+    height: 150px;
+    width: 160px;
+    border-radius: 20px;
+    display: grid;
+    place-items: center;
+    transition: all 0.2s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  
+  .app-icon:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+  
+  .app-icon img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; 
+  }
+  
+  .app-title {
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .app-link {
+    color: #000;
+    text-decoration: none
+  }
+  
+  .top-nav {
+          /* background: #0c93e7; */
+          background: #27A2B8;
+          height: 70px;
+          padding-top: 10px;
+      }
+  
+      .top-head {
+          color: #fff;
+          font-size: 30px;
+          font-weight: 600;
+          text-decoration: none
+      }
+  
+      .top-head:hover {
+          color: #fff;
+  
+      }
+  
+      .dropdown-menu {
+          height: 300px;
+          width: 250px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+          border: none;
+  
+      }
+  
+      .log-img {
+          height: 100px;
+          margin-top: 20px
+      }
+  
+      .btn-logout {
+          background: rgb(175 15 15);
+          padding: 5px 73px;
+          color: #fff;
+          text-decoration: none;
+          border-radius: 5px;
+          font-size: 20px;
+          font-weight: 600;
+          border: none;
+      }
+  
+      .btn-logout:hover {
+          background: #000;
+          color: #fff;
+          cursor: pointer;
+      }
+  
+      #logo {
+          height: 50px;
+          padding: 5px 5px 5px 5px;
+      }
+      #connectLogo {
+        height: 60px;
+        padding: 15px 0 5px 0;
+      }
+    
+
+      .share-link {
+        line-height: 60px;
+        padding: 0 1em;
+        font-size: 2em;
+      }
+      #wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #f5f5f5;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #000;
+    margin-left: 40px;
+    font-size: 20px;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #1C93E7;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+    margin-top: 20px;
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #1C93E7 !important;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+}
+.card-shadow{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+.btn-submit{
+    background: #27A2B8;
+    color: #fff;
+    font-weight: 600;
+    font-size: 18px;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+
+}
+.btn-submit:hover{
+    background: #77c3d2;
+    color: #000;
+    
+
+}
